<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gym"
    tools:context=".FeesActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_start"
        android:layout_marginEnd="@dimen/card_end"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fee_details"
                android:textColor="@color/textColor"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFeesCore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_start"
                android:layout_marginEnd="@dimen/view_end"
                android:gravity="start"
                android:text="@string/core"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFeesPersonalTrainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_start"
                android:layout_marginEnd="@dimen/view_end"
                android:gravity="start"
                android:text="@string/personal_trainer"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFeesZumba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_start"
                android:layout_marginEnd="@dimen/view_end"
                android:gravity="start"
                android:text="@string/zumba"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFeesLocker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_start"
                android:layout_marginEnd="@dimen/view_end"
                android:gravity="start"
                android:text="@string/locker"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFeesSteamBath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_start"
                android:layout_marginEnd="@dimen/view_end"
                android:gravity="start"
                android:text="@string/steam_bath"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFeesTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_start"
                android:layout_marginTop="@dimen/view_top"
                android:layout_marginEnd="@dimen/view_end"
                android:gravity="end"
                android:text="@string/total"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btPayFees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/view_top"
                android:layout_marginBottom="@dimen/view_bottom"
                android:background="@drawable/btn_shape_round"
                android:text="@string/pay" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>